force-app/main/default/objects/Sandbox_Config__mdt/Sandbox_Config__mdt.object-meta.xml
<CustomObject>
    <description>Configuration for PrepareMySandbox post-copy script. Update the Template record values before deploying to your org.</description>
    <label>Sandbox Config</label>
    <pluralLabel>Sandbox Configs</pluralLabel>
</CustomObject>