force-app/main/default/objects/Sandbox_Config__mdt/fields/Admin_Role_Name__c.field-meta.xml
<CustomField>
    <fullName>Admin_Role_Name__c</fullName>
    <label>Admin Role Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>