force-app/main/default/objects/Sandbox_Config__mdt/fields/New_Profile_Name__c.field-meta.xml
<CustomField>
    <fullName>New_Profile_Name__c</fullName>
    <label>New Profile Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>