force-app/main/default/objects/Sandbox_Config__mdt/fields/Public_Group_Name__c.field-meta.xml
<CustomField>
    <fullName>Public_Group_Name__c</fullName>
    <label>Public Group Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>